--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,16 @@
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
    
+
 }
 
+html, body {
+    width: 100%;
+    height: 100%; 
+}
+body {
+    overflow-x: hidden; 
+}
 
 .hero {
     background: linear-gradient(rgba(2, 82, 89, 0.9), rgba(255, 255, 255, 0));
@@ -23,7 +31,8 @@
     background-attachment: fixed;
     background-image: url("bg.jpg");
     background-repeat: no-repeat;
-    min-height: 131vh;
+    min-height: 100vh; 
+    width: 100vw; 
     color: var(--white);
 }
 
@@ -45,6 +54,9 @@ header {
     align-items: center;
     color: var(--primary-color);
     font-size: 18px;
+    width: 100vw; 
+    position: relative;
+    z-index: 100; 
 }
 
 .header-email {
@@ -780,7 +792,9 @@ p.card-text {
     width: 100%;
     background-color: #141414;
     color: #b3b3b3;
+    width: 100vw; 
 }
+
 
 .footerwala {
     display: flex;
@@ -830,6 +844,12 @@ p.card-text {
 
 
 @media (max-width: 768px) {
+
+    .hero {
+        background-attachment: scroll;
+        width: 100%; 
+    }
+
     .gridfooter {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -866,6 +886,9 @@ p.card-text {
 a {
     text-decoration: none;
 }
+
+
+
 
 @media only screen and (max-width: 600px) {
 
