--- a/managedlandingpage/styles.css
+++ b/managedlandingpage/styles.css
@@ -16,7 +16,10 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
-
+body{
+width:100vw;
+    height:auto;
+}
 
 .hero {
     background: linear-gradient(rgba(2, 82, 89, 0.9), rgba(255, 255, 255, 0));
