--- a/styles.css
+++ b/styles.css
@@ -1084,6 +1084,9 @@ cursor: pointer;
                         transition: 0.3s ease-in-out;
                         transform: scale(1.1);
                     }
+                      .adjusting{
+                        font-size:45px;
+                    }
                     
                 }
                 
