--- a/styles.css
+++ b/styles.css
@@ -1085,7 +1085,8 @@ cursor: pointer;
                         transform: scale(1.1);
                     }
                       .adjusting{
-                        font-size:45px;
+                        font-size:52px;
+                          font-weight:700;
                     }
                     
                 }
