--- a/managedlandingpage/styles.css
+++ b/managedlandingpage/styles.css
@@ -1083,8 +1083,9 @@ cursor: pointer;
                         transition: 0.3s ease-in-out;
                         transform: scale(1.1);
                     }
-                    .adjusting{
-                        font-size:45px;
+                   .adjusting{
+                        font-size:52px;
+                          font-weight:700;
                     }
                 }
                 
